build/log/idf_py_stderr_output_93470
/home/pi/wifiRelay_2/main/wifiRelay.c: In function '_http_event_handler_1':
/home/pi/wifiRelay_2/main/wifiRelay.c:337:41: error: implicit declaration of function 'start_wifi_ap' [-Wimplicit-function-declaration]
  337 |                                         start_wifi_ap();
      |                                         ^~~~~~~~~~~~~
/home/pi/wifiRelay_2/main/wifiRelay.c:338:41: error: implicit declaration of function 'start_webserver' [-Wimplicit-function-declaration]
  338 |                                         start_webserver();
      |                                         ^~~~~~~~~~~~~~~
/home/pi/wifiRelay_2/main/wifiRelay.c: At top level:
/home/pi/wifiRelay_2/main/wifiRelay.c:484:6: warning: conflicting types for 'start_wifi_ap'; have 'void()'
  484 | void start_wifi_ap() {
      |      ^~~~~~~~~~~~~
/home/pi/wifiRelay_2/main/wifiRelay.c:337:41: note: previous implicit declaration of 'start_wifi_ap' with type 'void()'
  337 |                                         start_wifi_ap();
      |                                         ^~~~~~~~~~~~~
/home/pi/wifiRelay_2/main/wifiRelay.c:635:16: error: conflicting types for 'start_webserver'; have 'void *(void)'
  635 | httpd_handle_t start_webserver(void) {
      |                ^~~~~~~~~~~~~~~
/home/pi/wifiRelay_2/main/wifiRelay.c:338:41: note: previous implicit declaration of 'start_webserver' with type 'int()'
  338 |                                         start_webserver();
      |                                         ^~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:87: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
